<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/background_game"
    tools:context=".MenuActivity"
    tools:ignore="MissingPrefix">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/background_game"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout2">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_easy"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="georgia"
            style="@style/MainMenuButtonStyle"
            android:id="@+id/easy_game"
            android:clickable="true"
            android:onClick="startGame"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_medium"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="georgia"
            style="@style/MainMenuButtonStyle"
            android:id="@+id/medium_game"
            android:clickable="true"
            android:onClick="startGame"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_hard"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="georgia"
            style="@style/MainMenuButtonStyle"
            android:id="@+id/hard_game"
            android:clickable="true"
            android:onClick="startGame"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_to_menu"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="georgia"
            style="@style/MainMenuButtonStyle"
            android:id="@+id/highscore"
            android:clickable="true"
            android:onClick="flipBackward"/>
    </LinearLayout>

</RelativeLayout>
