<resources>
    <string name="app_name">WikiLeaps</string>

    <string name="action_replay">Restart game</string>
    <string name="action_help">Help</string>

    <string name="title_activity_game">GameActivity</string>
    <string name="congratulations">Success!</string>
    <string name="no_way_out">You can only use links to other articles!</string>
    <string name="title_activity_high_score">HighScoreActivity</string>
    <string name="start_game"><b>New game</b></string>
    <string name="back_to_menu"><b>Back to menu</b></string>
    <string name="mode_easy"><b>Easy</b></string>
    <string name="mode_medium"><b>Medium</b></string>
    <string name="mode_hard"><b>Hard</b></string>
    <string name="history"><b>History</b></string>
    <string name="zero">0</string>
    <string name="title">WikiLeaps</string>
    <string name="wiki">Wiki</string>
    <string name="leaps">Leaps</string>
    <string name="contentDescriptionTitle">image</string>
</resources>
