<?xml version="1.0" encoding="utf-8"?>
<ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/flipper"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
        <include android:id="@+id/first"  layout="@layout/menu_first" />
        <include android:id="@+id/second"  layout="@layout/menu_second" />
</ViewFlipper>